--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dotenv": "^8.2.0",
     "ethers": "^5.6.0",
     "express": "^4.17.1",
+    "moment": "^2.29.1",
     "mongodb": "^4.4.1",
     "node-cron": "^2.0.3",
     "redis": "^4.0.4",
