--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "dotenv": "^8.2.0",
     "ethers": "^5.6.0",
     "express": "^4.17.1",
-    "moment": "^2.29.1",
+    "lodash": "^4.17.21",
+    "moment": "^2.29.2",
     "mongodb": "^4.4.1",
     "node-cron": "^2.0.3",
     "redis": "^4.0.4",
@@ -21,6 +22,8 @@
     "@types/cors": "^2.8.12",
     "@types/debug": "^4.1.7",
     "@types/express": "^4.17.13",
+    "@types/lodash": "^4.14.181",
+    "@types/moment": "^2.13.0",
     "@types/node": "^14.14.22",
     "@types/node-cron": "^3.0.1",
     "env-cmd": "^10.1.0",
