--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dotenv": "^8.2.0",
     "ethers": "^5.6.0",
     "express": "^4.17.1",
+    "husky": "^7.0.4",
     "lodash": "^4.17.21",
     "moment": "^2.29.2",
     "mongodb": "^4.4.1",
@@ -30,7 +31,9 @@
     "nodemon": "^2.0.6"
   },
   "scripts": {
-    "build": "tsc"
+    "build": "tsc",
+    "lint": "tsc --noEmit",
+    "prepare": "husky install"
   },
   "engines": {
     "node": "14"
