feat: advanced tx search

--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   },
   "scripts": {
     "build": "tsc",
-    "lint": "tsc --noEmit",
+    "lint": "tsc --pretty",
     "prepare": "husky install"
   },
   "engines": {
